removed ^ for power
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1518 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/mathtree.tex
+++ b/manual/mathtree.tex
@@ -10,8 +10,7 @@ variable names here here.
 
 \begin{description}
 \item[Operators:]
-\verb|+|; \verb|-|; \verb|*|; \verb|/|; \verb|**| and \verb|^| (both
-for power)
+\verb|+|; \verb|-|; \verb|*|; \verb|/|; \verb|**|
 \item[Functions:]
 \verb|neg| (negate); \verb|abs| (absolute value); \verb|sgn| (signum);
 \verb|sqrt| (square root); \verb|exp|; \verb|log| (natural logarithm);
