error in documentation corrected
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1519 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/faq/glifaq.dtx
+++ b/faq/glifaq.dtx
@@ -58,7 +58,7 @@
 % be chosen as document class. 
 %  
 % The options of the package \texttt{glifaq} mostly control the kind of 
-% questions which will be typeset. There are three kinds of questions:
+% questions which will be typeset. There are four kinds of questions:
 % \begin{center}
 % \begin{tabular}{ll}
 % |a| & answered question\\
