some new graph doc
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@1523 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/manual/manual.tex
+++ b/manual/manual.tex
@@ -47,12 +47,12 @@ TODO: Insert an abstract about \PyX{}.
 \include{color}
 \include{graph}
 \include{axis}
-%\appendix
-%\include{mathtree}
-%\include{colorname}
-%\include{palettename}
-%\include{pathstyles}
-%\include{arrows}
+\appendix
+\include{mathtree}
+\include{colorname}
+\include{palettename}
+\include{pathstyles}
+\include{arrows}
 
 \input{manual.ind}
 
