--- a/manual/color.tex
+++ b/manual/color.tex
@@ -28,7 +28,7 @@ c.fill(path.rect(1, 1, 1, 1), [color.rgb.red])
 c.fill(path.rect(3, 1, 1, 1), [color.rgb.green])
 c.fill(path.rect(5, 1, 1, 1), [color.rgb.blue])
 
-c.writetofile("color")
+c.writeEPSfile("color")
 \end{verbatim}
 \end{quote}
 
