--- a/manual/epsfile.tex
+++ b/manual/epsfile.tex
@@ -8,7 +8,7 @@ at discretion. The most simple example looks like
 from pyx import *
 c = canvas.canvas()
 c.insert(epsfile.epsfile(0, 0, "file.eps"))
-c.writetofile("output")
+c.writeEPSfile("output")
 \end{verbatim}
 \end{quote}
 
